# lanpaste

./: Cargo.toml  README.md  openapi.yaml
.github/workflows/: ci.yml
data/repo/meta/: 01KHA55MQ0NRF2FGCSR0A1H3B5.json  01KJTJF08K2VN88R1YBQCDX9ED.json
data/repo/pastes/2026/02/13/: 01KHA55MQ0NRF2FGCSR0A1H3B5__note.md.md
data/repo/pastes/2026/03/03/: 01KJTJF08K2VN88R1YBQCDX9ED__lanpaste-feature-rich-test.md
data/repo/slugs/: lanpaste-feature-rich-test.json
scripts/: coverage.sh  smoke.sh
src/: auth.rs  config.rs  errors.rs  gitops.rs  http.rs  lib.rs  main.rs  preflight.rs  render.rs  store.rs  types.rs
tasks/: lessons.md  todo.md
tests/: contract_openapi.rs  integration_api.rs  integration_git.rs  smoke_cli.rs
tests/fixtures/: sample.txt
