[package]
name = "lanpaste"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
hex = "0.4"
http = "1"
ipnet = "2"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "0.10"
subtle = "2.6"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
axum-test = "17"
predicates = "3"
reqwest = { version = "0.12", features = ["json"] }
serde_yaml = "0.9"
serial_test = "3"
tempfile = "3"
